[gd_scene load_steps=8 format=3 uid="uid://c7dqfw38kh88k"]

[ext_resource type="Script" path="res://UI/Menus/VictoryMenu/VictoryMenu.gd" id="1_su0ui"]
[ext_resource type="FontFile" uid="uid://delvnctbli24y" path="res://Assets/fonts/Caudex-Bold.ttf" id="1_wyv8k"]
[ext_resource type="FontFile" uid="uid://bvvb51yov72a0" path="res://Assets/fonts/Caudex-Regular.ttf" id="2_mjd1w"]
[ext_resource type="PackedScene" uid="uid://dtpkylmn14mi6" path="res://UI/Elements/MenuButton/MenuButton.tscn" id="3_koym7"]
[ext_resource type="PackedScene" uid="uid://bosom7y11rha3" path="res://UI/Elements/RunSummary/RunSummary.tscn" id="4_8gl2g"]

[sub_resource type="FontVariation" id="FontVariation_ihk8i"]
base_font = ExtResource("1_wyv8k")
spacing_glyph = 4

[sub_resource type="FontVariation" id="FontVariation_4axqc"]
base_font = ExtResource("2_mjd1w")

[node name="VictoryMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_su0ui")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.54902)

[node name="Container" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -631.0
offset_top = -409.0
offset_right = 631.0
offset_bottom = 409.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Container"]
custom_minimum_size = Vector2(221, 30)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_ihk8i")
theme_override_font_sizes/font_size = 120
text = "VICTORY"
horizontal_alignment = 1

[node name="Sections" type="HBoxContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 200

[node name="Message" type="Label" parent="Container/Sections"]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("FontVariation_4axqc")
theme_override_font_sizes/font_size = 30
text = "The Forgotten King has been banished from this realm... For now...

Thank you so much for playing!

The full game will not end here... it'll have more bosses, more weapons, and hopefully, more fun. Stay tuned for updates!"
vertical_alignment = 1
autowrap_mode = 3

[node name="RunSummary" parent="Container/Sections" instance=ExtResource("4_8gl2g")]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 150
alignment = 1

[node name="PlayAgainButton" parent="Container/Buttons" instance=ExtResource("3_koym7")]
layout_mode = 2
text = "PLAY AGAIN"

[node name="MainMenuButton" parent="Container/Buttons" instance=ExtResource("3_koym7")]
layout_mode = 2
text = "MAIN MENU"

[connection signal="pressed" from="Container/Buttons/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="Container/Buttons/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
